# kinesis-tailr

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  docker-compose.yml
.github/workflows/: release.yml  rust.yml
build-aux/arch/kinesis-tailr-bin/: PKGBUILD
build-aux/debian/: control  postinst
src/: aws.rs  cli_helpers.rs  console.rs  console2.rs  iterator.rs  kinesis.rs  main.rs  sink.rs
src/console/: tests.rs
src/console2/: tests.rs
src/iterator/: aws.rs
src/kinesis/: helpers.rs  models.rs  tests.rs  ticker.rs
src/sink/: buffer_flush.rs  console.rs  console_tests.rs  file.rs  file_tests.rs  tests.rs
