[package]
name = "kinesis-tailr"
version = "0.0.1"
license = "GPL-3,0-or-later"
description = "kinesis-tailr"
readme = "README.md"
homepage = ""
repository = ""
authors = ["Romain Gallet <rgallet@grumlimited.co.uk>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = { version = "0.55" }
aws-sdk-kinesis     = { version = "0.28" }
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
config = "0.13"
ctrlc-async = "3.2"
env_logger = "0.10"
humantime = "2.1"
log = "0.4"
log4rs = "1.2"
nix = "0.26"
thiserror = "1.0"
tokio = { version = "1.28", features = ["rt-multi-thread",  "macros"] }

[features]
default = ["clap/cargo", "clap/derive", "config/json"]
