[package]
name = "kinesis-tailr"
version = "0.0.1"
license = "GPL-3,0-or-later"
description = "kinesis-tailr"
readme = "README.md"
homepage = ""
repository = ""
authors = ["Romain Gallet <rgallet@grumlimited.co.uk>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0"
aws-config = { version = "0" }
aws-sdk-kinesis = { version = "0" }
chrono = { version = "0", features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
ctrlc-async = "3"
env_logger = "0"
humantime = "2"
log = "0"
log4rs = "1"
nix = { version = "0", features = ["signal"] }
rand = "0"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread",  "macros"] }

[features]
default = ["clap/cargo", "clap/derive"]
